# channel-scanner

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .env.example  .gitignore  .ruff.toml  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  context.py  logging_setup.py  main.py  utils.py
backend/app/api/: __init__.py  channels.py  clients.py  config.py  control.py  deps.py  device.py  events.py  export.py  health.py  metrics.py  recordings.py  scan.py  sessions.py  wavenis.py
backend/app/models/: __init__.py  schemas.py
backend/app/sdr/: __init__.py  base.py  factory.py  rtl_power_backend.py  rtlsdr_backend.py  sim.py
backend/app/services/: __init__.py  candidate_log.py  control_lease.py  decoder.py  iq_stream.py  recorder.py  retention.py  scan_manager.py  triggered_capture.py
backend/app/signal_processing/: __init__.py  clustering.py  detector.py  fingerprint.py  noise_floor.py  psd.py  recurrence.py  wavenis.py
backend/app/storage/: __init__.py  db.py  migrations.py  repositories.py
backend/app/websocket/: __init__.py  manager.py  route.py
backend/static/: index.html
backend/tests/: conftest.py  test_api.py  test_backend_fallback.py  test_candidate_log.py  test_clustering.py  test_config_runtime.py  test_config_validation.py  test_db.py  test_detector.py  test_e2e_sim.py  test_iq_capture.py  test_noise_floor.py  test_recurrence.py  test_wavenis.py  test_websocket.py
data/: README.md
docker/: app.Dockerfile
docs/: architecture.md  signal-detection.md  troubleshooting.md  (+1 more)
(+69 files in other folders)
