[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl-sdr-channel-detector-backend"
version = "0.1.0"
description = "Receive-only RTL-SDR passive spectrum monitoring backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "channel-scanner" }]
keywords = ["rtl-sdr", "spectrum", "passive", "receive-only", "sdr"]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "numpy==2.2.1",
    "scipy==1.15.0",
    "aiosqlite==0.20.0",
    "python-multipart==0.0.20",
    "websockets==14.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
# Optional real-hardware backend. Guarded import; app runs in sim without it.
rtlsdr = ["pyrtlsdr==0.3.0"]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff>=0.8",
]

[project.scripts]
channel-detector = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["static", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "W"]
ignore = [
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
